--- a/app/src/main/res/layout/fragment_admin_edit.xml
+++ b/app/src/main/res/layout/fragment_admin_edit.xml
@@ -85,11 +85,13 @@
         android:layout_width="403dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="15dp"
         android:fontFamily="@font/sleigothic"
         android:gravity="center"
         android:text="개인 정보 수정"
         android:textColor="@color/light_white"
         android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline30"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +121,6 @@
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_focus"
-        android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="수정할 비밀번호를 입력하세요"
@@ -153,7 +154,6 @@
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_focus"
-        android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="수정할 이름을 입력하세요"
@@ -171,7 +171,6 @@
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_focus"
-        android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="수정할 전화번호를 입력하세요"
@@ -189,7 +188,6 @@
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/edittext_focus"
-        android:backgroundTint="@color/white"
         android:ems="10"
         android:fontFamily="@font/sleigothic"
         android:hint="수정할 소속을 입력하세요"
