--- a/app/src/main/res/drawable/box_yellow_round_gradation_10dp.xml
+++ b/app/src/main/res/drawable/box_yellow_round_gradation_10dp.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient android:angle="180"
-        android:startColor="#FFFFFF"
-        android:endColor="@color/light_white"
+        android:endColor="#ffb606"
+        android:startColor="#f7971e"
         android:type="linear" />
 
     <corners
-        android:topLeftRadius="30dp"
-        android:topRightRadius="30dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
         />
     <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
 </shape>
