--- a/app/src/main/res/drawable/edittext_focus_login.xml
+++ b/app/src/main/res/drawable/edittext_focus_login.xml
@@ -21,7 +21,7 @@
         android:right="1dp"
         android:top="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/light_white"/>
             <corners
                 android:bottomRightRadius="10dp"
                 android:bottomLeftRadius="10dp"
@@ -35,7 +35,7 @@
 
     <item android:state_focused="false">
             <shape>
-                <solid android:color="@color/white"/>
+                <solid android:color="@color/light_white"/>
                 <corners android:bottomLeftRadius="10dp"
                     android:bottomRightRadius="10dp"
                     android:topLeftRadius="10dp"
