--- a/app/src/main/res/layout/fragment_worker_list_page.xml
+++ b/app/src/main/res/layout/fragment_worker_list_page.xml
@@ -204,7 +204,7 @@
         android:id="@+id/tv_id12"
         android:layout_width="102dp"
         android:layout_height="36dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:fontFamily="@font/sleigothic"
         android:gravity="center"
@@ -698,11 +698,11 @@
 
     <android.widget.Button
         android:id="@+id/btn_back_workerlist"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:background="@drawable/xback"
+        android:background="@drawable/close"
         android:backgroundTint="#424040"
         app:layout_constraintEnd_toStartOf="@+id/guideline26"
         app:layout_constraintTop_toTopOf="@+id/guideline31" />
