--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,18 +18,18 @@
 
         <Button
             android:id="@+id/btn_setup"
-            android:layout_width="55dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="38dp"
 
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="196dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginStart="205dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="8dp"
             android:layout_toEndOf="@+id/imageView"
-            android:background="@drawable/ic_settings"
+            android:background="@drawable/gear"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageView
